--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
-# Twitter Sentiment Analysis Requirements
-
-# Core dependencies
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-
-# Natural Language Processing
+Flask==3.0.0
+gunicorn==21.2.0
+numpy==1.26.2
+pandas==2.1.3
+scikit-learn==1.3.2
 nltk==3.8.1
-
-# Web Framework
-Flask==2.3.2
 Flask-Cors==4.0.0
-
-# Optional (for visualization if needed)
-matplotlib==3.7.2
-seaborn==0.12.2
-wordcloud==1.9.2
